graylog/overlays/nprd-apps/graylog-ingress.yaml
# Graylog Ingress Resource
# Created manually because Helm chart isn't creating it
# TODO: Investigate why Helm chart ingress isn't being created

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graylog
  namespace: managed-graylog
  labels:
    app.kubernetes.io/name: graylog
    app.kubernetes.io/instance: graylog
    app.kubernetes.io/component: graylog
    managed-by: gitops
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - graylog.dataknife.net
      secretName: wildcard-dataknife-net-tls
  rules:
    - host: graylog.dataknife.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: graylog-svc
                port:
                  number: 9000
